--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="container-fluid container-1">
         <div class="row">
             <div class="col">
-                <a href="#" class="navbar-brand">
+                <a href="index.html" class="navbar-brand">
                     <img src="img/Mangiare (1).png" class="img-fluid">
                 </a>
             </div>
@@ -30,16 +30,16 @@
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="#" class="nav-link active">Home</a>
+                                <a href="index.html" class="nav-link active">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Cardápio</a>
+                                <a href="cardapio.html" class="nav-link">Cardápio</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Reserva</a>
+                                <a href="reserva.html" class="nav-link">Reserva</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Delivery</a>
+                                <a href="delivery.html" class="nav-link">Delivery</a>
                             </li>
                             <li class="nav-item">
                                 <a href="#" class="nav-link">Contato</a>
